--- a/css/component.css
+++ b/css/component.css
@@ -1,17 +1,4 @@
-@font-face {
-	font-family: 'icomoon';
-	src:url('../fonts/icomoon.eot');
-	src:url('../fonts/icomoon.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/icomoon.woff') format('woff'),
-		url('../fonts/icomoon.ttf') format('truetype'),
-		url('../fonts/icomoon.svg#icomoon') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-
-/* Common styles of menus */
-
-.dl-menuwrapper {
+//Deleting this profile
 	width: 100%;
 	max-width: 300px;
 	float: left;
